# weekly

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  TODO.md  goal.yaml  mkdocs.yml  project.functions.toon  project.sh  project.toon-schema.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_change.py
.github/workflows/: ci.yml
docs/: architecture.md  checkers.md  development.md  git_scanning.md  index.md  llm_complete_example.md  llm_usage_guide.md
examples/: README.md  git_scan_example.py
tests/: __init__.py  benchmark_scan.py  debug_parse_mypy.py  test_analyzer.py  test_cli.py  test_packaging_checker.py  test_release_readiness_checker.py  test_reporter.py  test_scan_integration.py  test_security_checker.py  test_style_checker.py
weekly/: __init__.py  cli.py  git_analyzer.py  git_change_analyzer.py  git_report.py  git_scanner.py  reporter.py
weekly/checkers/: __init__.py  base.py  ci_cd.py  code_quality.py  dependencies.py  docs.py  packaging.py  release_readiness.py  security.py  style.py  testing.py
weekly/core/: analyzer.py  logger.py  project.py  repo_status.py  report.py
weekly/templates/: repo_report.html  summary_report.html
