[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests
addopts = -v --cov=weekly --cov-report=term-missing
python_files = test_*.py

[coverage:run]
source = weekly
omit = 
    */tests/*
    */__init__.py

[coverage:report]
show_missing = True

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,.venv,venv,build,dist
per-file-ignores =
    # Allow * imports in __init__.py
    __init__.py: F401,F403

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[egg_info]
tag_build = 
tag_date = 0
